Using part of real data

--- a/models/cnn_model.py.ipynb
+++ b/models/cnn_model.py.ipynb
@@ -6,80 +6,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
+    "import pandas as pd\n",
     "\n",
-    "def weighted_variable(shape):\n",
-    "    initializer = tf.contrib.layers.xavier_iniitalizer_conv2d()\n",
-    "    initial = initializer(shape=shape)\n",
-    "    return tf.Variable(initial)\n",
-    "\n",
-    "def bias_variable(shape):\n",
-    "    initial = tf.constant(0.1, shape=shape)\n",
-    "    return tf.Variable(initial)\n",
-    "\n",
-    "def conv2d(x, W, stride):\n",
-    "    return tf.nn.conv2d(x, W, strides=[1, stride, 1, 1], padding='VALID')\n",
-    "\n",
-    "\n",
-    "class CNNModel(object):\n",
-    "    \n",
-    "    def __init__(self, dropout_prob=0.0, batch_norm=False, is_trianing=True):\n",
-    "        \n",
-    "        x = tf.placeholder(tf.float32, shape=[None, 100, 24,1], name='x')\n",
-    "        y_= tf.placeholder(tf.float, shape=[None, 1])\n",
-    "        keep_prob = tf.placeholder(tf.float32, name='keep_prob')\n",
-    "        x_val = x\n",
-    "        \n",
-    "        self.W_conv1 = weight_variable([5, 24, 1, 16])  #h, w, #in channels, #out channels\n",
-    "        self.b_conv1 = bias_variable([16])\n",
-    "        self.h_conv1 = tf.nn.relu(conv2d(x_val, self.W_conv1,1) + self.b_conv1)\n",
-    "        \n",
-    "        self.W_conv2 = weight_variable([5, 24, 16, 20])\n",
-    "        self.b_conv2 = bias_variable([20])\n",
-    "        self.h_conv2 = tf.nn.relu(conv2d(self.h_conv1, self.W_conv2,1) + self.b_conv2)\n",
-    "                \n",
-    "        self.W_fc1 = weight_variable([2400, 1164]) # in, out\n",
-    "        self.b_fc1 = bias_variable([1164])\n",
-    "        \n",
-    "        self.h_conv2_flat = tf.reshape(self.h_conv2, [-1,2400]) # TODO: get right number\n",
-    "        self.h_fc1 = tf.nn.relu(tf.matmul(self.h_conv2_flat, self.Wfc1) + self.b_fc1)\n",
-    "        \n",
-    "        self.W_fc2 = weight_variable([1164, 100])\n",
-    "        self.b_fc2 = bias_variable([100])\n",
-    "        self.h_fc2 = tf.nn.relu(tf.matmul(self.h_fc1_drop, self.W_fc2) + self.b_fc2, name='fc2')\n",
-    "        \n",
-    "        #if batch_norm:\n",
-    "        #    self.h_fc2 = tf.contrib.layers.batch_norm(self.h_fc2, is_training=is_training, trainable=True)\n",
-    "        self.h_fc2_drop = tf.nn.dropout(self.h_fc2, keep_prob)\n",
-    "\n",
-    "        self.W_fc3 = weight_variable([100, 50])\n",
-    "        self.b_fc3 = bias_variable([50])\n",
-    "        self.h_fc3 = tf.nn.relu(tf.matmul(self.h_fc2_drop, self.W_fc3) + self.b_fc3, name='fc3')\n",
-    "        #if batch_norm:\n",
-    "        #    self.h_fc3 = tf.contrib.layers.batch_norm(self.h_fc3, is_training=is_training, trainable=True)\n",
-    "        self.h_fc3_drop = tf.nn.dropout(self.h_fc3, keep_prob)\n",
-    "\n",
-    "        self.W_fc4 = weight_variable([50, 10])\n",
-    "        self.b_fc4 = bias_variable([10])\n",
-    "        self.h_fc4 = tf.nn.relu(tf.matmul(self.h_fc3_drop, self.W_fc4) + self.b_fc4, name='fc4')\n",
-    "        #if batch_norm:\n",
-    "        #    self.h_fc4 = tf.contrib.layers.batch_norm(self.h_fc4, is_training=is_training, trainable=True)\n",
-    "        self.h_fc4_drop = tf.nn.dropout(self.h_fc4, keep_prob)\n",
-    "\n",
-    "        self.W_fc5 = weight_variable([10, 1])\n",
-    "        self.b_fc5 = bias_variable([1])\n",
-    "        y = tf.mul(tf.atan(tf.matmul(self.h_fc4_drop, self.W_fc5) + self.b_fc5), 2, name='y')\n",
-    "\n",
-    "        self.x = x\n",
-    "        self.y_ = y_\n",
-    "        self.y = y\n",
-    "        self.keep_prob = keep_prob\n",
-    "        self.fc2 = self.h_fc2\n",
-    "        self.fc3 = self.h_fc3\n",
+    "import argparse\n",
+    "import os.path\n",
+    "import csv\n",
+    "import numpy as np\n",
+    "np.set_printoptions(threshold=np.inf)\n",
     "\n",
     "        \n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/cameo_scores.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jupyter/tacc-work/jupyter_packages/envs/rosetta/lib/python3.5/site-packages/ipykernel_launcher.py:1: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'3vu4'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a= np.fromstring(df.iloc[0].psi[1:-2])\n",
+    "df.pdb_id[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' 1.62942403e+01  7.80644920e+01  1.44608166e+02  1.28937682e+02\\n -1.11371451e+01  1.52535675e+02  1.49716987e+02  1.50723998e+02\\n  1.58668046e+02  1.64925613e+02 -2.88615357e+01  1.20850991e+01\\n  4.06913317e+01 -1.24412608e+01  1.56423954e+02  1.32772638e+02\\n  1.42818018e+02  1.48153777e+02  1.50094910e+02 -1.70707564e+02\\n -2.16093709e+01 -1.59863275e+01 -1.75668910e+02  1.40884679e+02\\n  1.54206565e+02  1.36260485e+02  1.65354139e+02  1.38785118e+02\\n -3.40731622e+01  1.10202556e+02  1.54111441e+02  1.26167593e+02\\n  1.34094685e+02  1.20395962e+02 -7.49314345e+00  1.45836798e+02\\n  1.51601280e+02  1.17144938e+02  1.42715539e+02  1.40186839e+02\\n  1.64685018e+02  3.61408631e+00  1.16797074e+02 -2.84928256e+01\\n  1.42914608e+02  1.37980928e+02  1.58195877e+02  1.55992176e+02\\n  1.04397498e+02 -1.17376985e+02  2.00129526e+01 -1.71853434e+02\\n  1.06692577e+01  1.40569433e+02  1.59633537e+02  1.43783302e+02\\n  1.61541936e+02  1.41078632e+02 -1.26691573e+02 -5.60575236e+01\\n  1.03544812e+02 -2.56710227e+01  1.09092049e+01  1.31060603e+02\\n  1.16222982e+02  1.24885581e+02  1.16920489e+02  1.48685028e+02\\n  1.23973176e+02 -6.12431184e+01 -3.21523306e+01  1.50730612e+00\\n  5.05023892e+01  1.42221589e+02  1.23066972e+02  1.33339721e-02\\n  1.57158343e+02  1.41914689e+02  1.30331686e+02  1.43338157e+02\\n  1.65918161e+02 -2.00548776e+01  1.69718271e+02  1.40684753e+02\\n  1.28363377e+02 -8.66072879e+01  1.51670385e+02  1.19950752e+02\\n  1.49910849e+02  1.42938531e+02  1.62313801e+02 -1.30796424e+01\\n -4.56622209e+01  1.67180546e+02  1.01459827e+02  1.29951286e+02\\n  1.25340459e+02  1.48927596e+02  1.42345477e+02 -1.26135693e+02\\n  3.82166108e+01  1.47308745e+02  1.26591567e+02  1.34971954e+02\\n  1.16215952e+02  1.69434759e+02  1.39046891e+02  8.40906995e+01\\n  1.69879831e+02  1.39788408e+02  1.74401868e+01  4.92024967e+01\\n  1.68160530e+02  1.22664273e+02 -8.08608183e+00  1.68671320e+02\\n  1.51047034e+02  1.46396118e+02  1.46778412e+02  1.24565569e+02\\n  1.75576591e+02  2.55061693e+01 -2.72640993e+01  1.33614404e+02\\n  1.39251532e+02  1.45590454e+02  1.27309859e+02  1.39459844e+02\\n  5.18672104e+01  6.67677972e+00  1.33231347e+02  1.26540530e+02\\n  1.26910530e+02  1.49464495e+02  1.40645980e+02  1.46271899e+02\\n -3.18814441e+01 -3.78273461e+01  1.00182137e+02 -7.95017727e+00\\n  6.34528660e+00  1.35752220e+02  1.55797738e+02  1.33261775e+02\\n  1.27412182e+02  1.41871680e+02  1.43116792e+02  9.76840555e+01\\n -4.07768390e+01 -2.31040754e+01 -7.90297740e+01  1.17373680e+02\\n  1.36987222e+02  1.27116078e+02  1.25805747e+02  7.32088741e+01\\n -4.91003076e+01  1.64085446e+02 -3.84445063e+01  1.68728884e+02\\n  1.38242477e+02  1.34304893e+02 -5.14314337e+01  1.58807467e+02\\n  1.48465788e+02  1.25294538e+02  1.44598835e+02  1.68994231e+02\\n -5.25891026e+01 -1.76494461e+01  1.53807013e+01 -8.57209546e+00\\n  1.52948184e+02  1.29388571e+02  1.37660690e+02  1.58771066e+02\\n  1.46080021e+02  1.78216843e+02  1.25829498e+02  5.11015757e+01\\n  1.39406195e+02 -8.78482630e+00  1.37213039e+02  1.34485151e+02\\n  1.49893497e+02  1.27551331e+02  1.55932736e+02  1.33799850e+02\\n -2.03617433e+01 -5.03893365e+01  6.85804441e+00  2.65942266e+01\\n  1.43744377e+02  1.13875075e+02 -3.56986816e+01  1.54623354e+02\\n  1.31086118e+02  1.46520877e+02  1.32114911e+02 -2.30475672e+01\\n -1.08565417e+02 -5.24760023e+01  1.05999484e+02 -2.45608317e+01\\n  1.52301306e+02  1.43369963e+02  1.34700492e+02 -3.73714116e+01\\n  1.56053528e+02  1.23502718e+02  1.52246168e+02  1.43690877e+02\\n  1.58378063e+02 -3.29418074e+01  1.85906174e+00  1.03128482e+01\\n -4.12020231e+01  1.52951251e+02  1.24801583e+02  1.37861146e+02\\n  1.36986106e+02  1.28455209e+02  1.71022337e+02  6.41111262e+00\\n -3.86936408e+00  4.94117237e+01  1.30796871e+02  1.30272019e+02\\n  1.46668549e+02  1.28662264e+02  1.47460058e+02  1.18098353e+02\\n -4.31238772e+01  1.47682244e+02  1.25511386e+02 -3.52085005e+01\\n  1.71185100e+02  9.92441815e+01  1.64472017e+02  1.40229821e+02\\n -9.50439759e+00  1.66000338e+02  1.64455104e+02  5.82233251e+01\\n  4.26180657e+01 -5.16954082e+00 -2.99914335e+01  1.39356680e+02\\n  1.01937569e+02  1.29847941e+02  1.47617805e+02  8.29543608e+01\\n  1.56021324e+02  1.22462852e+02  1.50732924e+02 -1.20732086e+01\\n  1.72995045e+02  1.41009154e+02 -3.68798036e+01  1.49570708e+02\\n  1.09350469e+02  1.29989048e+02  1.17905648e+02  1.48690017e+02\\n  1.09018346e+02  1.47814249e+02  1.74528515e+02  1.84176993e+00\\n  1.73300798e+01  1.35463509e+02 -7.04378398e+01 -1.51982143e+02\\n  1.71342279e+02  1.39450703e+02  1.62546818e+02  1.30381345e+02\\n  1.42671218e+02  3.00092433e+00 -1.69377454e+02 -1.95198450e+01\\n -1.13853223e+01  1.48285920e+02  1.58212330e+02  1.52952531e+02\\n  1.27794590e+02  1.24254235e+02  1.08144603e+02 -3.58397156e+01\\n -2.86072944e+01  4.47548786e+00  4.32235156e+01  1.45090495e+02\\n  1.18781064e+02  1.35592552e+02  1.22315662e+02  1.54044669e+02\\n  1.34429963e+02  1.21290764e+02  1.42273978e+02  1.28000807e+02\\n  1.05376328e+02 -4.19344110e+01 -4.20383634e+01 -1.25534149e+01\\n  4.60994151e+01  1.43875072e+02  1.43223731e+02  1.52552245e+02\\n  1.30832685e+02  1.45636701e+02  1.14491978e+02 -3.01871775e+01\\n  1.46472320e+02  1.10734985e+02  1.65393701e+02  1.42711684e+02\\n  1.10751738e+02  1.34029972e+02  0.00000000e+00  1.07818397e+02\\n  7.79166538e+01  1.58617748e+02  1.27078911e+02 -1.50387805e+01\\n  1.55274937e+02  1.49254245e+02  1.61234839e+02  1.63516622e+02\\n  1.78285046e+02 -4.92825168e+00 -3.18978101e+00  2.16406645e+00\\n -2.12825166e+01  1.61559316e+02  1.24264191e+02  1.37227733e+02\\n  1.52773565e+02  1.45132296e+02 -1.53191309e+02 -9.58599241e+00\\n -9.97668756e+00 -1.77982567e+02  1.35574064e+02  1.52587213e+02\\n  1.29380217e+02  1.52929366e+02  1.35263721e+02 -4.05437129e+01\\n  1.13446622e+02  1.52886647e+02  1.23577654e+02  1.32797499e+02\\n  9.64417057e+01 -5.45688648e+01  1.75856443e+02  1.40693666e+02\\n  1.15196943e+02  1.36198761e+02  1.53062573e+02  1.63529878e+02\\n  2.12882081e+01  1.30464095e+02 -6.81676628e+00  1.28467958e+02\\n  1.38409297e+02  1.69754990e+02  1.41036882e+02  1.08438045e+02\\n -1.24621548e+02  2.74032057e+01 -1.71436374e+02  1.32712005e+01\\n  1.20573612e+02  1.56290255e+02  1.35697189e+02  1.66329795e+02\\n  1.34201934e+02 -1.20341950e+02 -4.36315379e+01  9.30621186e+01\\n -1.54875230e+01  1.22290037e+01  1.24645426e+02  1.27262088e+02\\n  1.31167166e+02  1.09491514e+02  1.42268996e+02  1.08345539e+02\\n -5.68814192e+01 -4.83465779e+01 -1.27339238e+01  8.04728003e+01\\n  1.41700153e+02  1.39986440e+02 -1.90522936e+01  1.57442477e+02\\n  1.29338999e+02  1.25558624e+02  1.41384478e+02  1.58173725e+02\\n -2.19825776e+01  1.64272867e+02  1.51458306e+02  1.29937708e+02\\n -8.03988610e+01  1.46495789e+02  1.14839141e+02  1.39723252e+02\\n  1.52959606e+02  1.69976065e+02 -3.85132825e+01 -2.16055792e+01\\n  1.64353231e+02  1.05559237e+02  1.24282228e+02  1.37008127e+02\\n  1.38958741e+02  1.42466779e+02 -1.23129304e+02  2.97432752e+01\\n  1.50170216e+02  1.23175820e+02  1.46572505e+02  1.08568899e+02\\n  1.62864944e+02  1.47432089e+02  9.18008314e+01  1.58233067e+02\\n  1.35834593e+02 -2.36267538e+01  4.35297652e+01  1.58728841e+02\\n  1.40727415e+02  7.66878696e+00  1.54631097e+02  1.41624093e+02\\n  1.63024912e+02  1.35360550e+02  1.42446297e+02  1.76425436e+02\\n  2.43959439e+00 -1.35544165e+01  1.32992795e+02  1.55801905e+02\\n  1.49617599e+02  1.32300224e+02  1.52255913e+02  5.46655058e+01\\n  2.60565269e+00  1.29554172e+02  1.22675452e+02  1.28339018e+02\\n  1.49727721e+02  1.36324745e+02  1.42152352e+02 -3.49318616e+01\\n -4.74791814e+01  1.04077287e+02  4.43380091e+00  5.41665638e+00\\n  1.44885660e+02  1.54267459e+02  1.45289575e+02  1.07279497e+02\\n  1.37324664e+02  1.21080685e+02  1.06565801e+02 -7.23483868e+01\\n -1.57487049e+02 -1.72086898e+02  1.25985284e+02  1.45467704e+02\\n  1.25157215e+02  7.49688878e+01 -3.16265220e+01  1.61382255e+02\\n -3.41779322e+01  1.66076013e+02  1.36603891e+02  1.39057383e+02\\n -4.94689436e+01  1.49686380e+02  1.54453336e+02  1.12418938e+02\\n  1.47318877e+02  1.58684731e+02 -4.88422715e+01 -1.07464997e+01\\n  2.08174818e+01 -1.16051769e+01  1.46364082e+02  1.32496606e+02\\n  1.40840799e+02  1.63360938e+02  1.42102089e+02 -1.75981599e+02\\n -1.39600445e+01 -3.63475629e+01  2.51726587e+01 -2.18391431e+01\\n  1.28351711e+02  1.25274629e+02  1.56579366e+02  1.13545008e+02\\n  1.61579822e+02  1.35883903e+02 -2.18298142e+01 -5.06603786e+01\\n -1.26773118e+01  4.95973040e+00  1.35985828e+02  1.44487178e+02\\n -1.65503346e+01  1.47665216e+02  1.28378390e+02  1.46266205e+02\\n  1.05564788e+02 -3.75111919e+01 -1.64588469e+02 -4.71473036e+01\\n  1.61325422e+02  1.44620838e+02  1.62376902e+02  1.15721708e+02\\n  1.16474707e+02 -4.50099428e+01  1.60792310e+02  1.31286544e+02\\n  1.47157389e+02  1.42401461e+02  1.63925765e+02 -2.63883450e+01\\n -5.60430775e+00  1.74226907e+01 -2.68005983e+01  1.62133513e+02\\n  1.30603602e+02  1.40319904e+02  1.43181376e+02  1.46601544e+02\\n  1.77565408e+02 -5.63779863e+00 -2.19180124e+01  4.11971493e+01\\n  1.21035927e+02  1.18877520e+02  1.33639282e+02  1.12829029e+02\\n  1.38746650e+02  1.21869784e+02 -3.68095860e+01  1.68692372e+02\\n  1.68167549e+02  3.20446842e+01  7.98168130e+01  1.31780609e+02\\n  1.63783402e+02  1.73648939e+02  1.36835047e+02 -3.60850847e+01\\n  1.70805906e+02  1.67679209e+02  1.41168080e+02  1.12868364e+02\\n  1.30257579e+02  9.33401727e+01  1.67100952e+02 -1.47718357e+02\\n -4.42312759e+01 -2.69582567e+01  1.18745608e+02 -7.19349485e+01\\n -1.54868329e+02  1.76249913e+02  1.42966822e+02  1.63585807e+02\\n  1.32502292e+02  1.38561806e+02  3.12467739e+00 -1.62099923e+02\\n -1.14671799e+01 -4.23068927e+00  1.53248848e+02  1.62427276e+02\\n  1.55568971e+02  1.28398751e+02  1.21403676e+02  1.01808329e+02\\n -3.18275256e+01 -2.92265548e+01  8.65671563e+00  5.04945714e+01\\n  1.40930342e+02  1.18767194e+02  1.42425181e+02  1.26713658e+02\\n  1.43176140e+02  1.40401870e+02  1.09630254e+02  1.50979533e+02\\n  1.10635275e+02  1.25707171e+02 -3.47953368e+01 -7.19202917e+00\\n -4.37599349e+00  4.68500858e+01  1.47265400e+02  1.34419628e+02\\n  1.60724582e+02  1.20452782e+02  1.40226443e+02  1.07547269e+02\\n -2.64447593e+01  1.61069520e+02  1.38416397e+02  1.63973864e+02\\n  1.42457478e+02  9.39731735e+01  1.47357285e+02  0.00000000e+0'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0].psi[1:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jupyter/tacc-work/jupyter_packages/envs/rosetta/lib/python3.5/site-packages/ipykernel_launcher.py:1: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1097, 1259, 620)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b= np.fromstring(df.iloc[0].phi[0:-2])\n",
+    "len(b), len(a), len(df.iloc[0].seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
